<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_bg_top_down"
    android:orientation="vertical"
    tools:context=".AddPassword"
    android:paddingBottom="30dp">
    <LinearLayout
        android:id="@+id/lnyLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/security"
            android:background="@drawable/round_border"
            android:layout_gravity="center"/>
        <TextView
            style="@style/header_style"
            android:text="@string/update_master_password"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="20dp"
            android:layout_margin="20dp"
            android:paddingBottom="20dp"
            android:background="@drawable/container_bg"
            android:orientation="vertical"
            >


            <TextView
                style="@style/text_style"
                android:text="@string/current_password" />

            <EditText
                android:id="@+id/edtCurrentPassword"
                style="@style/edit_text_style"
                android:focusable="false"
                android:editable="false"
                android:inputType="text" />

            <TextView
                style="@style/text_style"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/edtNewPassword"
                style="@style/edit_text_style"
                android:inputType="textPassword" />

            <TextView
                style="@style/text_style"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/edtConfirmPassword"
                style="@style/edit_text_style"
                android:inputType="textPassword" />


            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>